# minion

./: README.md  cabal.project  makefile  prepare-release.sh  upload-docs.sh
minion/: CHANGELOG.md  LICENSE  minion.cabal
minion-client/: CHANGELOG.md  LICENSE  minion-client.cabal
minion-client/src/Web/Minion/: Client.hs
minion-conduit/: minion-conduit.cabal
minion-conduit/app/: UpperCase.hs
minion-conduit/src/Web/Minion/: Conduit.hs
minion-conduit/src/Web/Minion/Examples/Conduit/: UpperCase.hs
minion-conduit/src/Web/Minion/Request/: Conduit.hs
minion-conduit/src/Web/Minion/Response/: Conduit.hs
minion-htmx/: minion-htmx.cabal
minion-htmx/src/Web/Minion/Htmx/: Headers.hs
minion-jwt/: minion-jwt.cabal
minion-jwt/app/: Jwt.hs
minion-jwt/src/Web/Minion/Auth/: Jwt.hs
minion-jwt/src/Web/Minion/Examples/: Jwt.hs
minion-openapi3/: index.html.tmpl  minion-openapi3.cabal
minion-openapi3/app/: OpenApi3.hs
minion-openapi3/src/Web/Minion/: Embed.hs  Files.hs  OpenApi3.hs
minion-openapi3/src/Web/Minion/Examples/: OpenApi3.hs
minion-openapi3/src/Web/Minion/OpenApi3/: Ui.hs
minion-wai-extra/: LICENSE  minion-wai-extra.cabal
minion-wai-extra/app/: Multipart.hs  ServerEvent.hs
minion-wai-extra/src/Web/Minion/Examples/: Multipart.hs  ServerEvent.hs
minion-wai-extra/src/Web/Minion/Request/: Multipart.hs
minion-wai-extra/src/Web/Minion/Response/: ServerEvent.hs
minion-websockets/: minion-websockets.cabal
minion-websockets/app/: Websocket.hs
minion-websockets/src/Web/Minion/: Websocket.hs
minion-websockets/src/Web/Minion/Examples/: Websocket.hs
minion-websockets/src/Web/Minion/Websocket/: Internal.hs
minion/app/: BasicAuth.hs  ComplexResponse.hs  HelloWorld.hs  Introspection.hs  Json.hs  Static.hs
minion/src/Web/: Minion.hs
minion/src/Web/Minion/: Args.hs  Auth.hs  Error.hs  Introspect.hs  Json.hs  Media.hs  Raw.hs  Request.hs  Response.hs  Router.hs  Static.hs
minion/src/Web/Minion/Args/: Internal.hs
minion/src/Web/Minion/Auth/: Basic.hs
minion/src/Web/Minion/Client/: Types.hs
minion/src/Web/Minion/Codec/: Decode.hs  Encode.hs
minion/src/Web/Minion/Examples/: BasicAuth.hs  ComplexResponse.hs  HelloWorld.hs  Introspection.hs  Json.hs  Static.hs
minion/src/Web/Minion/Introspect/: Internal.hs
minion/src/Web/Minion/Media/: FormUrlEncoded.hs  Html.hs  Json.hs  OctetStream.hs  PlainText.hs
minion/src/Web/Minion/Request/: Body.hs  Header.hs  Method.hs  Path.hs  Query.hs  Url.hs
minion/src/Web/Minion/Request/Body/: FormUrlEncoded.hs  Json.hs  PlainText.hs  Raw.hs
minion/src/Web/Minion/Request/Header/: Internal.hs
minion/src/Web/Minion/Request/Query/: Flag.hs  Form.hs  Internal.hs  Param.hs  Params.hs  QueryFlag.hs  QueryForm.hs  QueryParam.hs  QueryParams.hs
minion/src/Web/Minion/Request/Query/QueryFlag/: Static.hs
minion/src/Web/Minion/Response/: Body.hs  Header.hs  Status.hs  Union.hs
minion/src/Web/Minion/Response/Body/: Json.hs  OctetStream.hs  PlainText.hs
minion/src/Web/Minion/Router/: Internal.hs
minion/test/: Spec.hs
