cabal-version:      3.0
name:               minion-client
version:            0.2.0.0
license:            MIT
license-file:       LICENSE
author:             Danil Berestov
maintainer:         goosedb@yandex.ru
synopsis:           Minion openapi3 support
category:           Web
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

common common
  ghc-options:        -Wall -Wunused-packages
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingStrategies
    DuplicateRecordFields
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLists
    OverloadedRecordDot
    OverloadedRecordDot
    OverloadedStrings
    PolyKinds
    RankNTypes
    RecordWildCards
    RoleAnnotations
    ScopedTypeVariables
    TemplateHaskell
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

library
  import:           common
  exposed-modules:  Web.Minion.Client
  build-depends:
    , base              >=4.16 && <5
    , bytestring
    , case-insensitive
    , containers
    , http-api-data
    , http-client
    , http-types
    , minion
    , template-haskell
    , text
    , transformers
    , wai

  hs-source-dirs:   src
  default-language: Haskell2010
