cabal-version:      3.0
name:               minion-conduit
version:            0.2.0.0
license:            MIT
license-file:       LICENSE
author:             goosedb
synopsis:           Minion conduit support
maintainer:         goosedb@yandex.ru
category:           Web
build-type:         Simple
extra-source-files: README.md

common common
  ghc-options:        -Wall -Wunused-packages
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingStrategies
    DuplicateRecordFields
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLists
    OverloadedRecordDot
    OverloadedRecordDot
    OverloadedStrings
    PolyKinds
    RankNTypes
    RecordWildCards
    RoleAnnotations
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

flag examples
  description: Enable examples build
  default:     False
  manual:      True

library
  import:           common

  if flag(examples)
    exposed-modules: Web.Minion.Examples.Conduit.UpperCase

  exposed-modules:
    Web.Minion.Conduit
    Web.Minion.Request.Conduit
    Web.Minion.Response.Conduit

  build-depends:
    , base        >=4.16 && <5
    , binary
    , bytestring
    , conduit
    , minion
    , text

  hs-source-dirs:   src
  default-language: Haskell2010

executable minion-conduit-example
  import:           common

  if !flag(examples)
    buildable: False

  main-is:          UpperCase.hs
  build-depends:
    , base
    , minion-conduit
    , warp

  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -threaded
