cabal-version:      3.0
name:               minion-openapi3
version:            0.2.0.0
license:            MIT
license-file:       LICENSE
author:             Danil Berestov
maintainer:         goosedb@yandex.ru
synopsis:           Minion openapi3 support
category:           Web
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  index.html.tmpl
  README.md
  ui/*.css
  ui/*.css.map
  ui/*.html
  ui/*.js
  ui/*.js.map
  ui/*.png

Flag Examples
  Description: Enable examples build
  Default:     False
  Manual:      True

common common
  ghc-options:        -Wall
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingStrategies
    DuplicateRecordFields
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLists
    OverloadedRecordDot
    OverloadedRecordDot
    OverloadedStrings
    PolyKinds
    RankNTypes
    RecordWildCards
    RoleAnnotations
    ScopedTypeVariables
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

library
  import:           common
  if flag(Examples)
    exposed-modules:
      Web.Minion.Examples.OpenApi3
  exposed-modules:
    Web.Minion.OpenApi3
    Web.Minion.OpenApi3.Ui

  other-modules:
    Web.Minion.Embed
    Web.Minion.Files

  build-depends:
    , aeson
    , base                       >=4.16 && <5
    , blaze-html
    , blaze-markup
    , bytestring
    , case-insensitive
    , directory
    , file-embed-lzma
    , filepath
    , http-api-data
    , http-types
    , insert-ordered-containers
    , lens
    , minion
    , openapi3
    , template-haskell
    , text

  hs-source-dirs:   src
  default-language: Haskell2010


executable minion-openapi3-example
  import:           common
  main-is:          OpenApi3.hs
  build-depends:
    , base
    , minion
    , minion-openapi3
    , warp

  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -threaded
